// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generator - spring-boot:graalvm with default options should call source snapshot 1`] = `
{
  "addMavenDefinition": [
    {
      "dependencyManagement": [],
      "plugins": [
        {
          "artifactId": "native-maven-plugin",
          "groupId": "org.graalvm.buildtools",
          "inProfile": "prod",
        },
        {
          "additionalContent": "              <executions>
                  <execution>
                      <configuration>
                          <enableLazyInitialization>true</enableLazyInitialization>
                      </configuration>
                      <goals>
                          <goal>enhance</goal>
                      </goals>
                  </execution>
              </executions>",
          "artifactId": "hibernate-enhance-maven-plugin",
          "groupId": "org.hibernate.orm.tooling",
          "inProfile": "prod",
          "version": "\${hibernate.version}",
        },
      ],
      "profiles": [
        {
          "content": "            <properties>
          <repackage.classifier>exec</repackage.classifier>
          <native-buildtools.version>'NATIVE-BUILD-TOOLS-VERSION'</native-buildtools.version>
        </properties>
        <dependencies>
            <dependency>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-core</artifactId>
            </dependency>
        </dependencies>
        <build>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <configuration>
                        <archive>
                            <manifestEntries>
                                <Spring-Boot-Native-Processed>true</Spring-Boot-Native-Processed>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <image>
                            <builder>paketobuildpacks/builder:tiny</builder>
                            <env>
                                <BP_NATIVE_IMAGE>true</BP_NATIVE_IMAGE>
                            </env>
                        </image>
                    </configuration>
                    <executions>
                        <execution>
                            <id>process-aot</id>
                            <goals>
                                <goal>process-aot</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.graalvm.buildtools</groupId>
                    <artifactId>native-maven-plugin</artifactId>
                    <version>\${native-buildtools.version}</version>
                    <executions>
                        <execution>
                            <id>add-reachability-metadata</id>
                            <goals>
                                <goal>add-reachability-metadata</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>build-native</id>
                            <goals>
                                <goal>build</goal>
                            </goals>
                            <phase>package</phase>
                        </execution>
                        <execution>
                            <id>test-native</id>
                            <goals>
                                <goal>test</goal>
                            </goals>
                            <phase>test</phase>
                        </execution>
                    </executions>
                    <configuration>
                        <classesDirectory>\${project.build.outputDirectory}</classesDirectory>
                        <metadataRepository>
                            <enabled>true</enabled>
                        </metadataRepository>
                        <imageName>\${native-image-name}</imageName>
                        <buildArgs>
                            <buildArg>--no-fallback \${native-build-args}</buildArg>
                        </buildArgs>
                    </configuration>
                </plugin>
            </plugins>
        </build>",
          "id": "native",
        },
        {
          "content": "            <dependencies>
           <dependency>
               <groupId>org.junit.platform</groupId>
               <artifactId>junit-platform-launcher</artifactId>
               <scope>test</scope>
           </dependency>
       </dependencies>
       <build>
           <plugins>
               <plugin>
                   <groupId>org.springframework.boot</groupId>
                   <artifactId>spring-boot-maven-plugin</artifactId>
                   <executions>
                       <execution>
                           <id>process-test-aot</id>
                           <goals>
                               <goal>process-test-aot</goal>
                           </goals>
                       </execution>
                   </executions>
               </plugin>
               <plugin>
                   <groupId>org.graalvm.buildtools</groupId>
                   <artifactId>native-maven-plugin</artifactId>
                   <configuration>
                       <classesDirectory>\${project.build.outputDirectory}</classesDirectory>
                       <metadataRepository>
                           <enabled>true</enabled>
                       </metadataRepository>
                   </configuration>
                   <executions>
                       <execution>
                           <id>native-test</id>
                           <goals>
                               <goal>test</goal>
                           </goals>
                       </execution>
                   </executions>
               </plugin>
           </plugins>
       </build>",
          "id": "nativeTest",
        },
      ],
      "properties": [
        {
          "property": "repackage.classifier",
        },
        {
          "property": "native-image-name",
          "value": "native-executable",
        },
        {
          "property": "native-build-args",
          "value": "--verbose -J-Xmx10g",
        },
      ],
    },
  ],
}
`;

exports[`generator - spring-boot:graalvm with default options should call source snapshot 2`] = `
{
  "addGradleDependencyCatalogPlugin": [
    {
      "addToBuild": true,
      "id": "org.graalvm.buildtools.native",
      "pluginName": "graalvm",
      "version": "'NATIVE-BUILD-TOOLS-VERSION'",
    },
    {
      "addToBuild": true,
      "id": "org.hibernate.orm",
      "pluginName": "hibernate",
      "version.ref": "hibernate",
    },
  ],
  "addGradleDependencyCatalogVersion": [
    {
      "name": "hibernate",
      "version": undefined,
    },
  ],
  "applyFromGradle": [
    {
      "script": "gradle/native.gradle",
    },
  ],
}
`;

exports[`generator - spring-boot:graalvm with default options should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.md.jhi.native": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonNativeConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/NativeConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/META-INF/native-image/liquibase/reflect-config.json": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - spring-boot:graalvm with default options should match files snapshot 2`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "README.md.jhi.native": {
    "stateCleared": "modified",
  },
  "gradle/native.gradle": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/JacksonNativeConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/config/NativeConfiguration.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/META-INF/native-image/liquibase/reflect-config.json": {
    "stateCleared": "modified",
  },
}
`;
